[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/scribbles.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Options.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -419.5
margin_top = -540.0
margin_right = 419.5
margin_bottom = 540.0

[node name="BackButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -50.0
margin_right = 95.0
custom_fonts/font = SubResource( 1 )
text = "back"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -403.0
margin_right = 245.0
margin_bottom = 403.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 490.0
margin_bottom = 806.0

[node name="OptionsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 490.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"
align = 1
valign = 1

[node name="spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 490.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 25 )

[node name="AudioLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 490.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "audio"
align = 1
valign = 1

[node name="fullscreen_check" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 490.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 3 )
text = "fullscreen"

[node name="borderless_check2" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 490.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 3 )
text = "borderless"

[node name="vsync_check3" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 490.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 3 )
text = "vsync"

[node name="spacer2" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 490.0
margin_bottom = 313.0
rect_min_size = Vector2( 0, 25 )

[node name="VideoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 490.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 2 )
text = "video"
align = 1
valign = 1

[node name="video_sliders" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 490.0
margin_bottom = 483.0

[node name="labels" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/video_sliders"]
margin_right = 86.0
margin_bottom = 101.0

[node name="master_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/video_sliders/labels"]
margin_right = 86.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "master"

[node name="music_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/video_sliders/labels"]
margin_top = 35.0
margin_right = 86.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "music"

[node name="sfx_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/video_sliders/labels"]
margin_top = 70.0
margin_right = 86.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "sfx"

[node name="sliders" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/video_sliders"]
margin_left = 90.0
margin_right = 490.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="master_slider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/video_sliders/sliders"]
margin_right = 400.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0

[node name="music_slider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/video_sliders/sliders"]
margin_top = 35.0
margin_right = 400.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0

[node name="sfx_slider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/video_sliders/sliders"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/fullscreen_check" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/borderless_check2" to="." method="_on_borderless_check2_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/vsync_check3" to="." method="_on_vsync_check3_toggled"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/video_sliders/sliders/master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/video_sliders/sliders/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/video_sliders/sliders/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
